...
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/heading_text_size"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/yearly_usage_breakdown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_info_title"
            android:layout_marginEnd="@dimen/common_small_margin"
            android:layout_marginStart="@dimen/common_small_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_loading_info"
            app:layout_constraintTop_toTopOf="@+id/img_loading_info"
            app:layout_constraintBottom_toBottomOf="@+id/img_loading_info"/>
...
