...
                app:layout_constraintDimensionRatio="10.4"
                app:srcCompat="@drawable/ic_curve_tool_bar"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_records"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:layout_marginTop="72dp"
            android:layout_marginStart="@dimen/common_small_margin"
            android:layout_marginEnd="@dimen/common_small_margin"
...
