...
        <variable
            name="vModel"
            type="com.sujewan.sph.view.ui.home.YearlyRecordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/row_base_ui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_margin="@dimen/common_small_margin"
...
